[gd_scene load_steps=17 format=3 uid="uid://dnk26wwbyb2ug"]

[ext_resource type="Script" uid="uid://bqdfwdbvl65wk" path="res://Scripts/Classes/EnemyClass.gd" id="1_40s10"]
[ext_resource type="Script" uid="uid://bmlsxukyd2le6" path="res://Scripts/Classes/Enemies/spike.gd" id="1_ei71k"]
[ext_resource type="PackedScene" uid="uid://yb8lhw18jpjv" path="res://Instances/Prefabs/Interactables/SpikeProjectileBall.tscn" id="2_b6y7b"]
[ext_resource type="Texture2D" uid="uid://s551e36d1lc4" path="res://Assets/Sprites/Enemys/Spike.png" id="2_ei71k"]
[ext_resource type="Script" uid="uid://ccrvbkmrhkog6" path="res://Scripts/Classes/VariationSprite.gd" id="3_b6y7b"]
[ext_resource type="Texture2D" uid="uid://csyc2qvts42eb" path="res://Assets/Sprites/Enemys/SpikeEnemyBall.png" id="4_2i02i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yvww2"]
atlas = ExtResource("2_ei71k")
region = Rect2(0, 0, 160, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmavl"]
atlas = ExtResource("2_ei71k")
region = Rect2(0, 32, 160, 32)

[sub_resource type="Animation" id="Animation_k4x8y"]
resource_name = "GetBall"
length = 1.25
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.45, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpikeBall:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpikeBall:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -28), Vector2(0, -22)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_ball"
}]
}

[sub_resource type="Animation" id="Animation_8aqws"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpikeBall:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_l1l1r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpikeBall:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpikeBall:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_17rxl"]
_data = {
&"GetBall": SubResource("Animation_k4x8y"),
&"Idle": SubResource("Animation_8aqws"),
&"RESET": SubResource("Animation_l1l1r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_x43vs"]
atlas = ExtResource("4_2i02i")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffphh"]
atlas = ExtResource("4_2i02i")
region = Rect2(0, 16, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7gks"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6y7b"]
size = Vector2(12, 12)

[node name="Spike" type="CharacterBody2D"]
script = ExtResource("1_ei71k")
yoshi_behavior = "Spit"
spit_item = ExtResource("2_b6y7b")
metadata/_custom_type_script = ExtResource("1_40s10")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_yvww2")
offset = Vector2(0, -8)
flip_h = true
hframes = 5
frame = 1
script = ExtResource("3_b6y7b")
textures = Array[Texture2D]([SubResource("AtlasTexture_yvww2"), SubResource("AtlasTexture_wmavl")])
settings_value = "spike"
metadata/_custom_type_script = ExtResource("3_b6y7b")

[node name="SpriteAnimations" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_17rxl")
}
autoplay = "Idle"

[node name="SpikeBall" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_x43vs")
script = ExtResource("3_b6y7b")
textures = Array[Texture2D]([SubResource("AtlasTexture_ffphh"), SubResource("AtlasTexture_x43vs")])
settings_value = "spike"
metadata/_custom_type_script = ExtResource("3_b6y7b")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_g7gks")

[node name="Hitbox" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b6y7b")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -8)

[connection signal="timeout" from="Timer" to="." method="play_throw_animation"]
